v1.1.0/modules/schema/pages/class/ConstraintResults.adoc
= `ConstraintResults`
:toclevels: 4


+++Provides the Market results for the constraint processing for either the DAM or RTM. The data includes the constraint type (binding or violated), the solved value for the constraint, and the associated shadow price.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ConstraintResults`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`ConstraintResults`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<BGLimit,`BGLimit`>>
//| [[slots_table.BGLimit]]<<BGLimit,`BGLimit`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++This value is determined in DA and RTM. The SCUC optimization ensures that the MW flow on the Branch Group will not exceed...+++
| _n/a_

| <<BGTRResCap,`BGTRResCap`>>
//| [[slots_table.BGTRResCap]]<<BGTRResCap,`BGTRResCap`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Branch Group TR Reservation Capacity - This value is determined in DA and RTM. It is the amount of spare transmission...+++
| _n/a_

| <<ConstraintClearing,`ConstraintClearing`>>
//| [[slots_table.ConstraintClearing]]<<ConstraintClearing,`ConstraintClearing`>>
| 0..1 +
xref::class/ConstraintClearing.adoc[`ConstraintClearing`]
| _n/a_
| _n/a_

| <<Flowgate,`Flowgate`>>
//| [[slots_table.Flowgate]]<<Flowgate,`Flowgate`>>
| 1 +
xref::class/Flowgate.adoc[`Flowgate`]
| _n/a_
| _n/a_

| <<MktContingency,`MktContingency`>>
//| [[slots_table.MktContingency]]<<MktContingency,`MktContingency`>>
| 1 +
xref::class/MktContingency.adoc[`MktContingency`]
| _n/a_
| _n/a_

| <<baseFlow,`baseFlow`>>
//| [[slots_table.baseFlow]]<<baseFlow,`baseFlow`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Branch base Power Flow.+++
| _n/a_

| <<bindingLimit,`bindingLimit`>>
//| [[slots_table.bindingLimit]]<<bindingLimit,`bindingLimit`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++MW Limit.+++
| _n/a_

| <<clearedValue,`clearedValue`>>
//| [[slots_table.clearedValue]]<<clearedValue,`clearedValue`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Cleared MW.+++
| _n/a_

| <<competitivePathConstraint,`competitivePathConstraint`>>
//| [[slots_table.competitivePathConstraint]]<<competitivePathConstraint,`competitivePathConstraint`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Non-competitive path constraint Flag"(Y/N)  indicating whether the shadow price on a non-competitive path was non-zero.+++
| _n/a_

| <<constraintType,`constraintType`>>
//| [[slots_table.constraintType]]<<constraintType,`constraintType`>>
| 0..1 +
xref::enumeration/ResultsConstraintType.adoc[`ResultsConstraintType`]
| +++Type of constraint.+++
| _n/a_

| <<limitFlag,`limitFlag`>>
//| [[slots_table.limitFlag]]<<limitFlag,`limitFlag`>>
| 0..1 +
xref::enumeration/ConstraintLimitType.adoc[`ConstraintLimitType`]
| +++Limit flag ('Maximum', 'Minimum').+++
| _n/a_

| <<optimizationFlag,`optimizationFlag`>>
//| [[slots_table.optimizationFlag]]<<optimizationFlag,`optimizationFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++Included in optimization Y/N.+++
| _n/a_

| <<overloadMW,`overloadMW`>>
//| [[slots_table.overloadMW]]<<overloadMW,`overloadMW`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Transmission overload MW.+++
| _n/a_

| <<percentMW,`percentMW`>>
//| [[slots_table.percentMW]]<<percentMW,`percentMW`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Actual MW flow as percent of limit.+++
| _n/a_

| <<shadowPrice,`shadowPrice`>>
//| [[slots_table.shadowPrice]]<<shadowPrice,`shadowPrice`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Shadow Price ($/MW) for the commodity.  Shadow price for the corresponding constraint.+++
| _n/a_

| <<updateTimeStamp,`updateTimeStamp`>>
//| [[slots_table.updateTimeStamp]]<<updateTimeStamp,`updateTimeStamp`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Update time stamp.+++
| _n/a_

| <<updateType,`updateType`>>
//| [[slots_table.updateType]]<<updateType,`updateType`>>
| 0..1 +
xref::enumeration/MQSCHGType.adoc[`MQSCHGType`]
| +++MQS change type.+++
| _n/a_

| <<updateUser,`updateUser`>>
//| [[slots_table.updateUser]]<<updateUser,`updateUser`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Updated user.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#baseFlow]
=== `baseFlow`
+++Branch base Power Flow.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.baseFlow`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.baseFlow,&#10548;>>
--
////


//[discrete]
[#BGLimit]
=== `BGLimit`
+++This value is determined in DA and RTM. The SCUC optimization ensures that the MW flow on the Branch Group will not exceed this limit in the relevant direction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.BGLimit`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.BGLimit,&#10548;>>
--
////


//[discrete]
[#BGTRResCap]
=== `BGTRResCap`
+++Branch Group TR Reservation Capacity - This value is determined in DA and RTM. It is the amount of spare transmission capacity that is left for the TR holder to use.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.BGTRResCap`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.BGTRResCap,&#10548;>>
--
////


//[discrete]
[#bindingLimit]
=== `bindingLimit`
+++MW Limit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.bindingLimit`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.bindingLimit,&#10548;>>
--
////


//[discrete]
[#clearedValue]
=== `clearedValue`
+++Cleared MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.clearedValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.clearedValue,&#10548;>>
--
////


//[discrete]
[#competitivePathConstraint]
=== `competitivePathConstraint`
+++Non-competitive path constraint Flag"(Y/N)  indicating whether the shadow price on a non-competitive path was non-zero.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.competitivePathConstraint`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.competitivePathConstraint,&#10548;>>
--
////


//[discrete]
[#ConstraintClearing]
=== `ConstraintClearing`



[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.ConstraintClearing`
| Cardinality
| 0..1
| Type
| xref::class/ConstraintClearing.adoc[`ConstraintClearing`]


|===

////
[.text-left]
--
<<slots_table.ConstraintClearing,&#10548;>>
--
////


//[discrete]
[#constraintType]
=== `constraintType`
+++Type of constraint.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.constraintType`
| Cardinality
| 0..1
| Type
| xref::enumeration/ResultsConstraintType.adoc[`ResultsConstraintType`]


|===

////
[.text-left]
--
<<slots_table.constraintType,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#Flowgate]
=== `Flowgate`



[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.Flowgate`
| Cardinality
| 1
| Type
| xref::class/Flowgate.adoc[`Flowgate`]


|===

////
[.text-left]
--
<<slots_table.Flowgate,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#limitFlag]
=== `limitFlag`
+++Limit flag ('Maximum', 'Minimum').+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.limitFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/ConstraintLimitType.adoc[`ConstraintLimitType`]


|===

////
[.text-left]
--
<<slots_table.limitFlag,&#10548;>>
--
////


//[discrete]
[#MktContingency]
=== `MktContingency`



[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.MktContingency`
| Cardinality
| 1
| Type
| xref::class/MktContingency.adoc[`MktContingency`]


|===

////
[.text-left]
--
<<slots_table.MktContingency,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#optimizationFlag]
=== `optimizationFlag`
+++Included in optimization Y/N.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.optimizationFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]


|===

////
[.text-left]
--
<<slots_table.optimizationFlag,&#10548;>>
--
////


//[discrete]
[#overloadMW]
=== `overloadMW`
+++Transmission overload MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.overloadMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.overloadMW,&#10548;>>
--
////


//[discrete]
[#percentMW]
=== `percentMW`
+++Actual MW flow as percent of limit.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.percentMW`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.percentMW,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#shadowPrice]
=== `shadowPrice`
+++Shadow Price ($/MW) for the commodity.  Shadow price for the corresponding constraint.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.shadowPrice`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.shadowPrice,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#updateTimeStamp]
=== `updateTimeStamp`
+++Update time stamp.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.updateTimeStamp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.updateTimeStamp,&#10548;>>
--
////


//[discrete]
[#updateType]
=== `updateType`
+++MQS change type.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.updateType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MQSCHGType.adoc[`MQSCHGType`]


|===

////
[.text-left]
--
<<slots_table.updateType,&#10548;>>
--
////


//[discrete]
[#updateUser]
=== `updateUser`
+++Updated user.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ConstraintResults.updateUser`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.updateUser,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/ConstraintClearing.adoc[`ConstraintClearing`] | xref::class/ConstraintClearing.adoc#ConstraintResults[`ConstraintResults`]



| xref::class/Flowgate.adoc[`Flowgate`] | xref::class/Flowgate.adoc#ConstraintResults[`ConstraintResults`]



| xref::class/MktContingency.adoc[`MktContingency`] | xref::class/MktContingency.adoc#ConstraintResults[`ConstraintResults`]


|===

